Fix Navbar elements are misaligned when viewing with a viewport width of <768.

--- a/kalite/distributed/static/css/distributed/bootstrap-overrides.css
+++ b/kalite/distributed/static/css/distributed/bootstrap-overrides.css
@@ -437,3 +437,14 @@ footer {
 @media only screen and (min-width: 470px) and (max-width: 767px) {
     h3.suggested-action-title { margin-top: 0; }
 }
+
+@media only screen and (max-width: 767px) {
+    h3.suggested-action-title { margin-top: 0; }
+    form#search-box, #language_selector { margin-top:32px; 13px; margin-bottom: 0px; padding-bottom: 0px; }
+    a#nav_learn,#nav_addstudent, #nav_addteacher, #nav_admin, #nav_coachreports, #nav_watch, #nav_practice, #nav_signup, #nav_login, #nav_update, #nav_logout, #nav_registerdevice, #nav_tests {margin-top: 36px;}
+}
+
+@media only screen and (max-width: 690px) {
+    #language_selector {position: absolute; width: 80px}
+    a#nav_learn,#nav_addstudent, #nav_addteacher, #nav_admin, #nav_coachreports, #nav_watch, #nav_practice, #nav_signup, #nav_login, #nav_update, #nav_logout, #nav_registerdevice, #nav_tests {float:left;}
+}
